--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node chucknorris.js",
-    "test": "mocha *.test.js"
+    "start": "npm run compile && node ./lib/src/main.js",
+    "compile": "./node_modules/.bin/babel ./src/*.js --out-dir lib",
+    "test": "npm run compile && mocha *./test/*test.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
   }
