--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
