--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/main.js",
-    "test": "mocha *./test/*test.js"
+    "test": "mocha ./test/*test.js"
   },
   "author": "",
   "license": "ISC",
