--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=8.11.3",
+    "npm": ">=6.3.0"
+  },
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
