--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "async-await-api-test",
+  "name": "axios-async-await-api-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
