--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/main.js",
-    "test": "mocha ./test/*test.js"
+    "test": "mocha ./test/*test.js",
+    "compile": "./node_modules/typescript/bin/tsc --p ./tsconfig.json",
+    "clean": "rm -rf ./node_modules ./lib"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +17,8 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "typescript": "^2.4.2"
   },
   "dependencies": {
     "axios": "^0.18.0"
