--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm": ">=6.3.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "typescript": "^2.4.2"
